--- a/slides/header.tex
+++ b/slides/header.tex
@@ -1,1 +1,3 @@
+\usepackage{caption}
+\captionsetup[figure]{labelformat=empty}
 \renewenvironment{Shaded} {\begin{snugshade}\footnotesize} {\end{snugshade}}
